# Example.RDP.Python.News_MCP

./: .gitignore  README.md  chat_app.py  langgraph.json  llm.py  pyproject.toml
evals/: trajectory_llm_as_judge.py
mcp-servers/: news-server.py  rdp_auth.py
